T2.Ejercicio_PyaJava/traductorPyaJavaParser.py
# Generated from ./traductorPyaJava.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class traductorPyaJavaParser ( Parser ):

    grammarFileName = "traductorPyaJava.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'def'", "'return'", "'print'", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'('", "')'", "','", "':'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "DEF", "RETURN", "PRINT", 
                      "IDENTIFIER", "NUMBER", "PLUS", "MINUS", "MULTIPLY", 
                      "DIVIDE", "LPAREN", "RPAREN", "COMMA", "COLON", "NEWLINE", 
                      "WS", "INDENT" ]

    RULE_program = 0
    RULE_functionDef = 1
    RULE_parameters = 2
    RULE_statement = 3
    RULE_expressionStatement = 4
    RULE_returnStatement = 5
    RULE_printStatement = 6
    RULE_expression = 7
    RULE_term = 8
    RULE_factor = 9
    RULE_arguments = 10

    ruleNames =  [ "program", "functionDef", "parameters", "statement", 
                   "expressionStatement", "returnStatement", "printStatement", 
                   "expression", "term", "factor", "arguments" ]

    EOF = Token.EOF
    T__0=1
    DEF=2
    RETURN=3
    PRINT=4
    IDENTIFIER=5
    NUMBER=6
    PLUS=7
    MINUS=8
    MULTIPLY=9
    DIVIDE=10
    LPAREN=11
    RPAREN=12
    COMMA=13
    COLON=14
    NEWLINE=15
    WS=16
    INDENT=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDef(self):
            return self.getTypedRuleContext(traductorPyaJavaParser.FunctionDefContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(traductorPyaJavaParser.PrintStatementContext,0)


        def getRuleIndex(self):
            return traductorPyaJavaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = traductorPyaJavaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.functionDef()
            self.state = 23
            self.printStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(traductorPyaJavaParser.DEF, 0)

        def IDENTIFIER(self):
            return self.getToken(traductorPyaJavaParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(traductorPyaJavaParser.LPAREN, 0)

        def parameters(self):
            return self.getTypedRuleContext(traductorPyaJavaParser.ParametersContext,0)


        def RPAREN(self):
            return self.getToken(traductorPyaJavaParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(traductorPyaJavaParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(traductorPyaJavaParser.NEWLINE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(traductorPyaJavaParser.StatementContext)
            else:
                return self.getTypedRuleContext(traductorPyaJavaParser.StatementContext,i)


        def getRuleIndex(self):
            return traductorPyaJavaParser.RULE_functionDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDef" ):
                listener.enterFunctionDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDef" ):
                listener.exitFunctionDef(self)




    def functionDef(self):

        localctx = traductorPyaJavaParser.FunctionDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functionDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self.match(traductorPyaJavaParser.DEF)
            self.state = 26
            self.match(traductorPyaJavaParser.IDENTIFIER)
            self.state = 27
            self.match(traductorPyaJavaParser.LPAREN)
            self.state = 28
            self.parameters()
            self.state = 29
            self.match(traductorPyaJavaParser.RPAREN)
            self.state = 30
            self.match(traductorPyaJavaParser.COLON)
            self.state = 31
            self.match(traductorPyaJavaParser.NEWLINE)
            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                self.statement()
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 131112) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(traductorPyaJavaParser.IDENTIFIER)
            else:
                return self.getToken(traductorPyaJavaParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(traductorPyaJavaParser.COMMA)
            else:
                return self.getToken(traductorPyaJavaParser.COMMA, i)

        def getRuleIndex(self):
            return traductorPyaJavaParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)




    def parameters(self):

        localctx = traductorPyaJavaParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.state = 46
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.match(traductorPyaJavaParser.IDENTIFIER)
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==13:
                    self.state = 38
                    self.match(traductorPyaJavaParser.COMMA)
                    self.state = 39
                    self.match(traductorPyaJavaParser.IDENTIFIER)
                    self.state = 44
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressionStatement(self):
            return self.getTypedRuleContext(traductorPyaJavaParser.ExpressionStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(traductorPyaJavaParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return traductorPyaJavaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = traductorPyaJavaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.expressionStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.returnStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(traductorPyaJavaParser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(traductorPyaJavaParser.ExpressionContext,0)


        def NEWLINE(self):
            return self.getToken(traductorPyaJavaParser.NEWLINE, 0)

        def INDENT(self):
            return self.getToken(traductorPyaJavaParser.INDENT, 0)

        def getRuleIndex(self):
            return traductorPyaJavaParser.RULE_expressionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStatement" ):
                listener.enterExpressionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStatement" ):
                listener.exitExpressionStatement(self)




    def expressionStatement(self):

        localctx = traductorPyaJavaParser.ExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expressionStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 52
                self.match(traductorPyaJavaParser.INDENT)


            self.state = 55
            self.match(traductorPyaJavaParser.IDENTIFIER)
            self.state = 56
            self.match(traductorPyaJavaParser.T__0)
            self.state = 57
            self.expression()
            self.state = 58
            self.match(traductorPyaJavaParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(traductorPyaJavaParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(traductorPyaJavaParser.ExpressionContext,0)


        def NEWLINE(self):
            return self.getToken(traductorPyaJavaParser.NEWLINE, 0)

        def INDENT(self):
            return self.getToken(traductorPyaJavaParser.INDENT, 0)

        def getRuleIndex(self):
            return traductorPyaJavaParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)




    def returnStatement(self):

        localctx = traductorPyaJavaParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_returnStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 60
                self.match(traductorPyaJavaParser.INDENT)


            self.state = 63
            self.match(traductorPyaJavaParser.RETURN)
            self.state = 64
            self.expression()
            self.state = 65
            self.match(traductorPyaJavaParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(traductorPyaJavaParser.PRINT, 0)

        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(traductorPyaJavaParser.LPAREN)
            else:
                return self.getToken(traductorPyaJavaParser.LPAREN, i)

        def IDENTIFIER(self):
            return self.getToken(traductorPyaJavaParser.IDENTIFIER, 0)

        def arguments(self):
            return self.getTypedRuleContext(traductorPyaJavaParser.ArgumentsContext,0)


        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(traductorPyaJavaParser.RPAREN)
            else:
                return self.getToken(traductorPyaJavaParser.RPAREN, i)

        def NEWLINE(self):
            return self.getToken(traductorPyaJavaParser.NEWLINE, 0)

        def getRuleIndex(self):
            return traductorPyaJavaParser.RULE_printStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)




    def printStatement(self):

        localctx = traductorPyaJavaParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_printStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(traductorPyaJavaParser.PRINT)
            self.state = 68
            self.match(traductorPyaJavaParser.LPAREN)
            self.state = 69
            self.match(traductorPyaJavaParser.IDENTIFIER)
            self.state = 70
            self.match(traductorPyaJavaParser.LPAREN)
            self.state = 71
            self.arguments()
            self.state = 72
            self.match(traductorPyaJavaParser.RPAREN)
            self.state = 73
            self.match(traductorPyaJavaParser.RPAREN)
            self.state = 74
            self.match(traductorPyaJavaParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(traductorPyaJavaParser.TermContext)
            else:
                return self.getTypedRuleContext(traductorPyaJavaParser.TermContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(traductorPyaJavaParser.PLUS)
            else:
                return self.getToken(traductorPyaJavaParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(traductorPyaJavaParser.MINUS)
            else:
                return self.getToken(traductorPyaJavaParser.MINUS, i)

        def getRuleIndex(self):
            return traductorPyaJavaParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = traductorPyaJavaParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.term()
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7 or _la==8:
                self.state = 77
                _la = self._input.LA(1)
                if not(_la==7 or _la==8):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 78
                self.term()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(traductorPyaJavaParser.FactorContext)
            else:
                return self.getTypedRuleContext(traductorPyaJavaParser.FactorContext,i)


        def MULTIPLY(self, i:int=None):
            if i is None:
                return self.getTokens(traductorPyaJavaParser.MULTIPLY)
            else:
                return self.getToken(traductorPyaJavaParser.MULTIPLY, i)

        def DIVIDE(self, i:int=None):
            if i is None:
                return self.getTokens(traductorPyaJavaParser.DIVIDE)
            else:
                return self.getToken(traductorPyaJavaParser.DIVIDE, i)

        def getRuleIndex(self):
            return traductorPyaJavaParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)




    def term(self):

        localctx = traductorPyaJavaParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.factor()
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9 or _la==10:
                self.state = 85
                _la = self._input.LA(1)
                if not(_la==9 or _la==10):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 86
                self.factor()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(traductorPyaJavaParser.NUMBER, 0)

        def IDENTIFIER(self):
            return self.getToken(traductorPyaJavaParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(traductorPyaJavaParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(traductorPyaJavaParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(traductorPyaJavaParser.RPAREN, 0)

        def getRuleIndex(self):
            return traductorPyaJavaParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)




    def factor(self):

        localctx = traductorPyaJavaParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_factor)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.match(traductorPyaJavaParser.NUMBER)
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.match(traductorPyaJavaParser.IDENTIFIER)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 94
                self.match(traductorPyaJavaParser.LPAREN)
                self.state = 95
                self.expression()
                self.state = 96
                self.match(traductorPyaJavaParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(traductorPyaJavaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(traductorPyaJavaParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(traductorPyaJavaParser.COMMA)
            else:
                return self.getToken(traductorPyaJavaParser.COMMA, i)

        def getRuleIndex(self):
            return traductorPyaJavaParser.RULE_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArguments" ):
                listener.enterArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArguments" ):
                listener.exitArguments(self)




    def arguments(self):

        localctx = traductorPyaJavaParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 6, 11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.expression()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==13:
                    self.state = 101
                    self.match(traductorPyaJavaParser.COMMA)
                    self.state = 102
                    self.expression()
                    self.state = 107
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





